[package]
name = "qunitx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qunitx"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dependencies]
tokio        = { version = "1",   features = ["full"] }
poem         = { version = "3",   features = ["websocket"] }
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
globset      = "0.4"
walkdir      = "2"
notify       = "6"
