[package]
name = "qunitx"
version = "0.1.2"
edition = "2021"
description = "Fast QUnit/QUnitX browser test runner"
license = "MIT"
repository = "https://github.com/izelnakri/qunitx-cli-rust"
homepage = "https://github.com/izelnakri/qunitx-cli-rust"

[lib]
name = "qunitx"
path = "src/lib.rs"

[[bin]]
name = "qunitx"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
tokio        = { version = "1",   features = ["full"] }
poem         = { version = "3",   features = ["websocket"] }
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
globset      = "0.4"
walkdir      = "2"
notify       = "6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile  = "3"
tokio     = { version = "1", features = ["full"] }

[[bench]]
name    = "pipeline"
harness = false

[package.metadata.release]
# git-cliff writes CHANGELOG.md as part of the release commit.
pre-release-hook = ["git-cliff", "--tag", "v{{version}}", "-o", "CHANGELOG.md"]
# `make release` already runs `make check` before invoking cargo-release,
# so skipping the duplicate test run here avoids redundant compilation.
verify = false

# Keep package.json version in sync with Cargo.toml on every release.
[[package.metadata.release.pre-release-replacements]]
file    = "package.json"
search  = '"version": "[^"]*"'
replace = '"version": "{{version}}"'

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
